--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                     </svg>
 
                                 </a>
-                                <ul class="acc-dropdow">
+                                <ul class="acc-dropdow " style="display: none;">
                                     <div class="user-info">
                                         <div class="user-avatar-wrapper">
                                             <div class="user-avatar">
@@ -1204,7 +1204,9 @@
             </div>
         </div>
     </section>
-
+    <!-- js -->
+    <script src="assets/js/jquery-3.7.1.min.js"></script>
+    <script src="assets/js/custom.js"></script>
 </body>
 
 </html>
