--- a/profile-2-lichsududoan.html
+++ b/profile-2-lichsududoan.html
@@ -573,7 +573,9 @@
             </div>
         </div>
     </section>
-
+    <!-- js -->
+    <script src="assets/js/jquery-3.7.1.min.js"></script>
+    <script src="assets/js/custom.js"></script>
 </body>
 
 </html>
