--- a/profile-1-thongtincanhan.html
+++ b/profile-1-thongtincanhan.html
@@ -382,7 +382,9 @@
             </div>
         </div>
     </section>
-
+    <!-- js -->
+    <script src="assets/js/jquery-3.7.1.min.js"></script>
+    <script src="assets/js/custom.js"></script>
 </body>
 
 </html>
