--- a/profile-2-lichsududoan.html
+++ b/profile-2-lichsududoan.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="acc-group">
                         <ul>
-                            <li class="acc-item">
+                            <li class="acc-item" style="display: none;">
                                 <a href="#" class="acc-link btn btn-yellow">
                                     <span>Đăng nhập</span>
                                 </a>
